# WorkoutBuddy

./: .envrc.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  ai_services_example.ipynb  config.yaml  docker-compose.yml  nginx.conf  pyproject.toml  run_tests.py  test.sh
analytics/experiments/: ab_testing.py
analytics/notebooks/: ai_services_example.ipynb  data_visualization.ipynb  exercises_data_exploration.ipynb  workoutbuddy_exploration.ipynb
analytics/scripts/: ml_demo_simple.py  user_behavior.py
backend/: pyproject.toml
backend/app/: config.py  config.yaml  crud.py  database.py  import_exercises.py  main.py  ml.py  models.py  requirements.txt  schemas.py
data/: exercise_table.md  exercise_table_ext.csv  exercise_table_extended.md  expanded_training_programs_client_id_16to23.csv  expanded_training_programs_client_id_1to7.csv  expanded_training_programs_client_id_8to15.csv  sample_accountability_checkins.csv  sample_community_connections.csv  sample_goal_checkins.csv  sample_goals.csv  sample_user_feedback.csv  sample_users.csv  survey_training_programs_dataset.csv  training_program_survey.md  weightlifting_program_decision_tree.md
deploy/: docker-compose.yml  start_dev.sh
deploy/cloud/railway/: RAILWAY_DEPLOY.md  railway.json
docs/: API.md  ARCHITECTURE_DIAGRAM.md  CUSTOMER_JOURNEY.md  DATABASE.md  JUPYTER_SETUP.md  UNIT_SYSTEM.md  USER_JOURNEY_DIAGRAM.md
docs/analytics/ml/: recommendation_engine.py
docs/analytics/notebooks/: ai_services_example.ipynb  workoutbuddy_exploration.ipynb
docs/analytics/notebooks/data_exports/: exercises_ml_ready.csv  exercises_raw.csv
frontend/: pubspec.yaml
frontend/lib/: config.dart  main.dart
ml_backend/: Dockerfile  config.yaml  development.yaml  requirements.txt  setup_database.sql
ml_backend/app/: ab_testing.py  ai_services.py  alembic.ini  analytics.py  config.py  crud.py  import_exercises.py  main.py  recommendation_engine.py
ml_backend/app/alembic/: env.py
ml_backend/app/alembic/versions/: 982b1b541d57_create_all_tables.py
ml_backend/app/api/: endpoints.py
ml_backend/app/core/: model.py  models.py  postprocess.py  preprocess.py  schemas.py
scripts/: populate_mock_data.py  populate_test_data.py  populate_test_data_sql.py  update_schema_units.py
src/: docker-compose.yaml  railway.toml
src/backend/: .coverage  .env  Dockerfile  alembic.ini  debug_test.py  fix_passwords.py  import_exercises.py  init.sql  pytest.ini  setup_database.py  update_exercises_data.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0c205c78dec4_add_friend_invitations_table_and_.py  1e63cee4a874_create_complete_schema_with_all_.py  713f5af58064_add_missing_exercise_columns.py  a7a30d6b7e5d_add_personalized_message_to_friend_.py  ad0bc1dd4027_recreate_exercises_table.py  add_social_features_enhancement.py  d801a7adea45_add_invitee_phone_to_friend_invitations_.py  f566f0d38566_initial_schema.py
src/backend/app/: Requirements.txt  config.py  config.yaml  database.py  main.py
src/backend/app/api/: __init__.py  accountability.py  auth.py  challenges.py  community.py  exercises.py  privacy.py  recommendations.py  safety.py  social.py  subscriptions.py  users.py  workouts.py
src/backend/app/core/: __init__.py  bootstrap.py  config.py  container.py  request_context.py  service_registration.py  user_session.py
src/backend/app/models/: __init__.py  challenge.py  checkin.py  community.py  exercise.py  friend_invitation.py  friendship.py  ml_feedback.py  privacy.py  safety.py  user.py  user_goal.py  user_stats.py  workout.py  workout_exercise.py
src/backend/app/repositories/: challenge_repository.py  user_repository.py
src/backend/app/schemas/: __init__.py  challenge.py  exercise.py  recommendation.py  user.py  workout.py
src/backend/app/services/: __init__.py  auth_service.py  challenge_service.py  data_service.py  exercise_analyzer.py  (+3 more)
src/backend/config/: config.development.yaml  config.yaml  feature_flags.yaml
src/backend/scripts/: README.md  __init__.py  config.py  database_setup.py  exercise_importer.py  test_import.py
src/backend/tests/: __init__.py  conftest.py  test_auth.py  test_bootstrap.py  test_config.py  test_di_container.py  test_exercises.py  test_service_registration.py  test_social_features.py
src/ml_service/: Dockerfile  Requirements.txt  api.py  main.py  test_ml_service.py
src/ml_service/app/: ExerciseRecommender.py  UserSimilarityModel.py  __init__.py  ai_services.py  api.py  config.py  database.py  exercise_recommender.py  models.py  user_similarity_model.py
src/ml_service/config/: __init__.py  ml_config.yaml
src/ml_service/data/: __init__.py  feature_processor.py
src/ml_service/models/: __init__.py  exercise_recommender.py  user_similarity_model.pkl  user_similarity_model.py
src/ml_service/tests/: __init__.py  conftest.py  test_api.py  test_ml_models.py
src/ml_service/utils/: __init__.py  config_loader.py
src/mobile/: .flutter-plugins-dependencies  Dockerfile  README.md  nginx.conf  pubspec.yaml
src/mobile/.dart_tool/: package_config.json  package_config_subset  package_graph.json
src/mobile/lib/: main.dart
src/mobile/web/: index.html  manifest.json
tests/: README.md
tests/python_api/: quick_analysis.py  start_jupyter.py  test_configuration.py  test_database_analysis.py  test_db.py  test_local.py  test_predict.py
(+27 files in other folders)
