[project]
name = "workoutbuddy-backend"
version = "0.1.0"
description = "WorkoutBuddy FastAPI backend with ML capabilities"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pydantic-extra-types>=2.10.4",
    "torch>=2.7.0",
    "scikit-learn>=1.6.1",
    "numpy>=2.2.6",
    "passlib>=1.7.4",
    "omegaconf>=2.3.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "anthropic>=0.42.0",
    "posthog>=4.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "pytest>=8.3.5",
    "ruff>=0.11.13",
    "ipykernel>=6.29.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.28.0",
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "ipywidgets>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.28.0",
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "ipywidgets>=8.0.0",
] 
